Refine typography and font styles in Page and Skeleton layouts (#17)
- Adjust prose text sizes for headings (h1, h2, h3)
- Increase Inter font weight to 700
- Enhance text color for strong elements and list markers
- Fine-tune heading margins and spacing

---------

Co-authored-by: Maribel Ferreira <maribelferreira@users.noreply.github.com>
Co-authored-by: Gus Narea <gnarea@users.noreply.github.com>

--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -30,17 +30,20 @@ const articleClasses = [
   "px-4",
   "sm:px-6",
   "prose",
+  "prose-h1:text-4xl",
   "text-sm",
-  "sm:text-base",
+  "sm:text-sm",
   "leading-normal",
   "font-['Inter']",
   "font-normal",
   "text-neutral-300",
+  "prose-headings:text-white",
   "prose-h1:mb-4",
+  "prose-h2:text-3xl",
   "prose-h2:mt-10",
   "prose-h2:mb-4",
-  "prose-h3:text-2xl",
-  "prose-h3:mt-10",
+  "prose-h3:text-xl",
+  "prose-h3:mt-8",
   "prose-h3:mb-2",
   "prose-h4:mt-3",
   "prose-h4:mb-1",
@@ -52,30 +55,35 @@ const articleClasses = [
 
   // Inline code
   "[&_:not(pre)>code]:bg-neutral-900",
-  "[&_:not(pre)>code]:py-1",
+  "[&_:not(pre)>code]:py-0.5",
   "[&_:not(pre)>code]:px-1",
   "[&_:not(pre)>code]:border",
   "[&_:not(pre)>code]:border-neutral-700",
   "[&_:not(pre)>code]:rounded-sm",
   "[&_:not(pre)>code]:text-neutral-400",
-  "[&_:not(pre)>code]:text-sm",
+  "[&_:not(pre)>code]:text-xs",
   "[&_:not(pre)>code]:font-mono",
   "[&_:not(pre)>code]:break-words",
   "[&_:not(pre)>code]:whitespace-normal",
   "prose-code:font-normal",
   "[&_code]:before:content-['']",
   "[&_code]:after:content-['']",
-  "prose-strong:text-neutral-300",
+  "[&_code>a]:text-green-300",
+  "[&_code>a]:no-underline",
+  "[&_code>a]:hover:text-green-200",
+  "[&_code>a]:hover:underline",
+  "[&_a>code]:text-green-300",
+  "[&_a>code]:hover:text-green-200",
+
+  "prose-strong:text-white",
+  "prose-strong:font-bold",
   "prose-dt:text-white",
   "prose-dl:text-neutral-400",
+  "prose-ol:marker:text-white",
+  "prose-ul:marker:text-white",
   "[&_dt]:text-white",
-  "prose-img:w-full",
-  "prose-h1:text-white",
-  "prose-h2:text-white",
-  "prose-h3:text-white",
-  "prose-h4:text-white",
-  "prose-h5:text-white",
-  "prose-h6:text-white",
+  "prose-img:max-w-full",
+  "prose-img:mx-auto",
 ];
 ---
 
