Replace "UX" page with "Integrations"

--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -6,7 +6,7 @@ import CloseIcon from "../assets/icons/close.svg?raw";
 
 const { pathname } = Astro.url;
 const navLinks = [
-  { href: "/ux", text: "User experience" },
+  { href: "/integrations", text: "Integrations" },
   { href: "/overview", text: "Tech overview" },
   { href: "/prior-art", text: "Prior art" },
 ];
