--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ import GithubIcon from "../assets/icons/github.svg?raw";
 import RedditIcon from "../assets/icons/reddit.svg?raw";
 
 const veraidLinks = [
-  { href: "/ux", text: "User Experience" },
+  { href: "/integrations", text: "Integrations" },
   { href: "/overview", text: "Tech overview" },
   { href: "/prior-art", text: "Prior art" },
   { href: "/spec", text: "Spec" },
