--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,8 @@ import GithubIcon from "../assets/icons/github.svg?raw";
 import RedditIcon from "../assets/icons/reddit.svg?raw";
 import BlueskyIcon from "../assets/icons/bluesky.svg?raw";
 const veraidLinks = [
-  { href: "/integrations", text: "Integrations" },
+  { href: "/users", text: "Users" },
+  { href: "/services", text: "Services" },
   { href: "/overview", text: "Tech overview" },
   { href: "/about", text: "About" },
   { href: "/spec", text: "Spec" },
