Replace "UX" page with "Services" (#20)

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,10 +6,11 @@ import GithubIcon from "../assets/icons/github.svg?raw";
 import RedditIcon from "../assets/icons/reddit.svg?raw";
 import BlueskyIcon from "../assets/icons/bluesky.svg?raw";
 const veraidLinks = [
-  { href: "/ux", text: "User Experience" },
+  { href: "/users", text: "Users" },
+  { href: "/services", text: "Services" },
   { href: "/overview", text: "Tech overview" },
-  { href: "/about", text: "About" },
   { href: "/spec", text: "Spec" },
+  { href: "/about", text: "About" },
 ];
 
 const relaycorpLinks = [
