--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -6,7 +6,8 @@ import CloseIcon from "../assets/icons/close.svg?raw";
 
 const { pathname } = Astro.url;
 const navLinks = [
-  { href: "/ux", text: "User experience" },
+  { href: "/users", text: "Users" },
+  { href: "/services", text: "Services" },
   { href: "/overview", text: "Tech overview" },
   { href: "/about", text: "About" },
 ];
