Update UseCases component link to Services page
Change "integrations" link to "services" to align with recent page renaming

--- a/src/components/Homepage/UseCases.astro
+++ b/src/components/Homepage/UseCases.astro
@@ -57,10 +57,10 @@ import offlineAuthentication from "../../assets/images/offline-authentication.pn
 
   <div class="flex flex-wrap gap-4 justify-center pt-4">
     <a
-      href="/integrations"
+      href="/services"
       class="bg-green-400 text-black px-6 sm:py-2 py-2 rounded-full hover:bg-green-300 text-sm md:text-base"
     >
-      See integrations
+      See services
     </a>
   </div>
 </section>
