Enhance newsletter signup and footer with policy links and styling

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -79,7 +79,7 @@ const currentYear = new Date().getFullYear();
       </div>
     </div>
 
-    <div class="mt-8 text-neutral-400">
+    <div class="mt-8 text-neutral-400 border-t border-neutral-800 pt-4">
       Copyright 2022-{currentYear} by <a
         href="https://relaycorp.tech"
         class="text-green-300 hover:text-green-200">Relaycorp</a
