Refine link and code styling across components

--- a/src/components/NewsletterSignup.astro
+++ b/src/components/NewsletterSignup.astro
@@ -7,10 +7,7 @@
     </h2>
     <p>
       Unsubscribe at anytime. We'll only share your data with Zoho, where it will be processed
-      according to their <a
-        href="https://www.zoho.com/mail/help/usage-policy.html"
-        class="text-green-300 hover:text-green-200">policies</a
-      >.
+      according to their <a href="https://www.zoho.com/mail/help/usage-policy.html">policies</a>.
     </p>
   </div>
   <div>
@@ -42,10 +39,8 @@
       <div class="flex items-start gap-2 mb-4">
         <input type="checkbox" id="consent" name="CONSENT" required class="mt-1" />
         <label for="consent" class="text-xs">
-          I understand <a
-            href="https://awala.app/en/legal/"
-            class="text-green-300 hover:text-green-200 hover:underline">Relaycorp's policies</a
-          > and authorise them to send me emails about VeraId.
+          I understand <a href="https://awala.app/en/legal/">Relaycorp's policies</a> and authorise them
+          to send me emails about VeraId.
         </label>
       </div>
 
