Implement pixelated frame design with custom CSS positioning - Add JetBrainsMono bold font face in Skeleton layout - Include tick icon for verified email display - Create detailed pixel-perfect frame segments

--- a/src/layouts/Skeleton.astro
+++ b/src/layouts/Skeleton.astro
@@ -75,6 +75,13 @@ function getSiteUrl(url: URL) {
     font-style: normal;
     font-display: swap;
   }
+  @font-face {
+    font-family: "JetBrainsMono";
+    src: url("/fonts/JetBrainsMono-Bold.woff2") format("woff2");
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+  }
   html,
   body {
     background-color: #000000;
