--- a/src/components/Homepage/Carousel.astro
+++ b/src/components/Homepage/Carousel.astro
@@ -1,17 +1,5 @@
 ---
-import { Image } from "astro:assets";
-import CarouselImage from "./CarouselImage.astro";
-import type { ImageMetadata } from "astro";
-
-interface Props {
-  images: {
-    src: ImageMetadata;
-    alt: string;
-    heightClass?: string;
-  }[];
-}
-
-const { images } = Astro.props;
+import Banner from "./Banner.astro";
 ---
 
 <div class="mt-6 md:mt-14 relative overflow-hidden w-full">
@@ -19,9 +7,9 @@ const { images } = Astro.props;
     {
       [...Array(2)].map(() => (
         <div class="flex gap-8 sm:gap-16 items-center min-w-max pr-4 sm:pr-8">
-          {images.map((image) => (
-            <div class="relative">
-              <CarouselImage src={image.src} alt={image.alt} heightClass={image.heightClass} />
+          {[...Array(7)].map(() => (
+            <div class="relative pb-3">
+              <Banner />
             </div>
           ))}
         </div>
