--- a/src/components/Homepage/Carousel.astro
+++ b/src/components/Homepage/Carousel.astro
@@ -22,7 +22,7 @@ import bbcImage from "../../assets/images/bbc.png";
           </div>
 
           <div class="relative pb-3">
-            <Banner type="image" source="xkcd.com" imageSrc={audioGif} imageAlt="XKCD comic" />
+            <Banner type="image" source="spotify.com" imageSrc={audioGif} imageAlt="XKCD comic" />
           </div>
 
           <div class="relative pb-3">
