--- a/src/components/Homepage/HowItWorks.astro
+++ b/src/components/Homepage/HowItWorks.astro
@@ -32,6 +32,7 @@ import CtaButton from "../CtaButton.astro";
 
       <div class="flex justify-center pt-4">
         <CtaButton href="/overview" text="Read technical overview" />
+        <CtaButton href="/demo" text="Try demo" />
       </div>
     </div>
   </div>
