--- a/src/components/Homepage/HowItWorks.astro
+++ b/src/components/Homepage/HowItWorks.astro
@@ -30,9 +30,9 @@ import CtaButton from "../CtaButton.astro";
         domain.
       </p>
 
-      <div class="flex justify-center pt-4">
-        <CtaButton href="/overview" text="Read technical overview" />
-        <CtaButton href="/demo" text="Try demo" />
+      <div class="flex flex-col md:flex-row justify-center items-center pt-4 gap-4 text-center">
+        <CtaButton href="/overview" text="Read technical overview" variant="primary" />
+        <CtaButton href="/demo" text="Try demo" variant="secondary" />
       </div>
     </div>
   </div>
