Remove redundant attribute

--- a/src/components/Homepage/HowItWorks.astro
+++ b/src/components/Homepage/HowItWorks.astro
@@ -31,7 +31,7 @@ import CtaButton from "../CtaButton.astro";
       </p>
 
       <div class="flex flex-col md:flex-row justify-center items-center pt-4 gap-4 text-center">
-        <CtaButton href="/overview" text="Read technical overview" variant="primary" />
+        <CtaButton href="/overview" text="Read technical overview" />
         <CtaButton href="/demo" text="Try demo" variant="secondary" />
       </div>
     </div>
