Fix Open Graph URL and image meta tags

--- a/src/layouts/Skeleton.astro
+++ b/src/layouts/Skeleton.astro
@@ -34,8 +34,8 @@ function getSiteUrl(url: URL) {
     <meta property="og:title" content={title} />
     <meta property="og:description" content={description} />
     <meta property="og:type" content={ogType} />
-    <meta property="og:url" content={ogUrl} />
-    <meta property="og:image" content={ogImageUrl} />
+    <meta property="og:url" content={ogUrl.href} />
+    <meta property="og:image" content={ogImageUrl.href} />
 
     <!-- Favicon -->
     <link rel="shorticon" type="image/svg+xml" href="/favicon/favicon.svg" />
