Add hidden LASTNAME field to newsletter signup form

--- a/src/components/NewsletterSignup.astro
+++ b/src/components/NewsletterSignup.astro
@@ -44,6 +44,7 @@
         </label>
       </div>
 
+      <input type="hidden" name="LASTNAME" />
       <input type="hidden" name="submitType" value="optinCustomView" />
       <input type="hidden" name="emailReportId" value="" />
       <input type="hidden" name="formType" value="QuickForm" />
