Update newsletter signup button text to "Sign up"

--- a/src/components/NewsletterSignup.astro
+++ b/src/components/NewsletterSignup.astro
@@ -29,7 +29,7 @@
         <button
           type="submit"
           name="SIGNUP_SUBMIT_BUTTON"
-          value="Subscribe"
+          value="Sign up"
           class="w-full lg:w-auto bg-green-400 hover:bg-green-300 text-black font-bold px-4 lg:px-8 py-2.5 rounded-full"
         >
           Subscribe
