--- a/src/layouts/Skeleton.astro
+++ b/src/layouts/Skeleton.astro
@@ -3,6 +3,7 @@ import TopNav from "../components/TopNav.astro";
 import Footer from "../components/Footer.astro";
 import OpenGraph from "../assets/images/opengraph.png";
 import "../styles/global.css";
+import { IS_PRODUCTION, getSiteUrl } from "../data/global";
 
 interface Props {
   title: string;
@@ -16,11 +17,6 @@ const { title, description, ogImage = OpenGraph.src, ogType = "website" } = Astr
 const siteUrl = getSiteUrl(Astro.url);
 const ogImageUrl = new URL(ogImage, siteUrl);
 const ogUrl = new URL(Astro.url, siteUrl);
-const IS_PRODUCTION = import.meta.env.PROD;
-
-function getSiteUrl(url: URL) {
-  return import.meta.env.SITE ?? `${url.protocol}//${url.host}`;
-}
 ---
 
 <!doctype html>
@@ -34,8 +30,8 @@ function getSiteUrl(url: URL) {
     <meta property="og:title" content={title} />
     <meta property="og:description" content={description} />
     <meta property="og:type" content={ogType} />
-    <meta property="og:url" content={ogUrl.href} />
-    <meta property="og:image" content={ogImageUrl.href} />
+    <meta property="og:url" content={ogUrl} />
+    <meta property="og:image" content={ogImageUrl} />
 
     <!-- Favicon -->
     <link rel="shorticon" type="image/svg+xml" href="/favicon/favicon.svg" />
